[gd_scene load_steps=4 format=2]

[ext_resource path="res://Placeholder Textures for Shards of the Past/desert_tileset.png" type="Texture" id=1]
[ext_resource path="res://sign.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0624

[node name="Story Sign" type="Node2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 224, 0, 16, 16 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 224, 16, 16, 16 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
